# rust-mandelbrot

./: Cargo.toml  makefile  notes.txt  old.txt
src/: complex.rs  lib.rs  main.rs
