[package]
name = "rust_mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"



[dependencies]
wasm-bindgen = "0.2.92"
dashu-float = "0.4.3"
dashu-int = "0.4.1"
dashu-macros = "0.4.1"
dashu-base = "0.4.1"
getrandom = { version = "0.2.12", features = ["js"] }
thread_local = "1.1.8"
rand = "0.8.5"

